@@ -4,6 +4,8 @@ Changes in JMurmel-1.4.1 relative to JMurmel-1.4
  * fixed sxhash to return nonnegative integer values
  * don't merge Windows launcher + jar to avoid virus warnings
 
+ * mlib: added multiple-value-list, nth-value
+
 
 Changes in JMurmel-1.4 relative to JMurmel-1.3.1
 released: 2023-01-13
